[gd_scene load_steps=26 format=2]

[ext_resource path="res://sprites/symbols/chi.png" type="Texture" id=1]
[ext_resource path="res://sprites/symbols/kagami.png" type="Texture" id=2]
[ext_resource path="res://sprites/symbols/nothingx.png" type="Texture" id=3]
[ext_resource path="res://sprites/symbols/wazawai.png" type="Texture" id=4]
[ext_resource path="res://sprites/symbols/honoo.png" type="Texture" id=5]
[ext_resource path="res://sprites/symbols/mo.png" type="Texture" id=6]
[ext_resource path="res://sprites/symbols/kaze.png" type="Texture" id=7]
[ext_resource path="res://sprites/symbols/ka.png" type="Texture" id=8]
[ext_resource path="res://sprites/symbols/hayashi.png" type="Texture" id=9]
[ext_resource path="res://sprites/symbols/okane.png" type="Texture" id=10]
[ext_resource path="res://sprites/symbols/rei.png" type="Texture" id=11]
[ext_resource path="res://icon.png" type="Texture" id=12]
[ext_resource path="res://sprites/symbols/kaminari.png" type="Texture" id=13]
[ext_resource path="res://sprites/symbols/hi.png" type="Texture" id=14]
[ext_resource path="res://sprites/symbols/ni.png" type="Texture" id=15]
[ext_resource path="res://sprites/symbols/yuki.png" type="Texture" id=16]
[ext_resource path="res://cardmaker.gd" type="Script" id=17]
[ext_resource path="res://sprites/symbols/omoi.png" type="Texture" id=18]
[ext_resource path="res://sprites/symbols/ji.png" type="Texture" id=19]
[ext_resource path="res://sprites/symbols/mono.png" type="Texture" id=20]
[ext_resource path="res://sprites/symbols/karada.png" type="Texture" id=21]
[ext_resource path="res://sprites/symbols/tomo.png" type="Texture" id=22]
[ext_resource path="res://sprites/symbols/ue.png" type="Texture" id=23]
[ext_resource path="res://sprites/symbols/teki.png" type="Texture" id=24]
[ext_resource path="res://sprites/symbols/mon.png" type="Texture" id=25]

[node name="cardmaker" type="Node2D"]
position = Vector2( 1.49829, 7.49153 )
script = ExtResource( 17 )

[node name="effect_symbol_chart" type="GridContainer" parent="."]
margin_left = 16.0659
margin_top = 0.0880585
margin_right = 429.066
margin_bottom = 516.088
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hearts_nothing" type="TextureButton" parent="effect_symbol_chart"]
margin_right = 100.0
margin_bottom = 100.0
disabled = true

[node name="diamonds_nothing" type="TextureButton" parent="effect_symbol_chart"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 100.0
disabled = true

[node name="kaze" type="TextureButton" parent="effect_symbol_chart" groups=[
"effect_symbols",
]]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 100.0
texture_normal = ExtResource( 7 )
texture_disabled = ExtResource( 3 )

[node name="hi" type="TextureButton" parent="effect_symbol_chart" groups=[
"effect_symbols",
]]
margin_left = 312.0
margin_right = 412.0
margin_bottom = 100.0
texture_normal = ExtResource( 14 )
texture_disabled = ExtResource( 3 )

[node name="yuki" type="TextureButton" parent="effect_symbol_chart" groups=[
"effect_symbols",
]]
margin_top = 104.0
margin_right = 100.0
margin_bottom = 204.0
texture_normal = ExtResource( 16 )
texture_disabled = ExtResource( 3 )

[node name="chi" type="TextureButton" parent="effect_symbol_chart" groups=[
"effect_symbols",
]]
margin_left = 104.0
margin_top = 104.0
margin_right = 204.0
margin_bottom = 204.0
texture_normal = ExtResource( 1 )
texture_disabled = ExtResource( 3 )

[node name="kaminari" type="TextureButton" parent="effect_symbol_chart" groups=[
"effect_symbols",
]]
margin_left = 208.0
margin_top = 104.0
margin_right = 308.0
margin_bottom = 204.0
texture_normal = ExtResource( 13 )
texture_disabled = ExtResource( 3 )

[node name="honoo" type="TextureButton" parent="effect_symbol_chart" groups=[
"effect_symbols",
]]
margin_left = 312.0
margin_top = 104.0
margin_right = 412.0
margin_bottom = 204.0
texture_normal = ExtResource( 5 )
texture_disabled = ExtResource( 3 )

[node name="ni" type="TextureButton" parent="effect_symbol_chart" groups=[
"effect_symbols",
]]
margin_top = 208.0
margin_right = 100.0
margin_bottom = 308.0
texture_normal = ExtResource( 15 )
texture_disabled = ExtResource( 3 )

[node name="hayashi" type="TextureButton" parent="effect_symbol_chart" groups=[
"effect_symbols",
]]
margin_left = 104.0
margin_top = 208.0
margin_right = 204.0
margin_bottom = 308.0
texture_normal = ExtResource( 9 )
texture_disabled = ExtResource( 3 )

[node name="ka" type="TextureButton" parent="effect_symbol_chart" groups=[
"effect_symbols",
]]
margin_left = 208.0
margin_top = 208.0
margin_right = 308.0
margin_bottom = 308.0
texture_normal = ExtResource( 8 )
texture_disabled = ExtResource( 3 )

[node name="clubs3" type="TextureButton" parent="effect_symbol_chart" groups=[
"effect_symbols",
]]
margin_left = 312.0
margin_top = 208.0
margin_right = 412.0
margin_bottom = 308.0
texture_normal = ExtResource( 12 )
texture_disabled = ExtResource( 3 )

[node name="kagami" type="TextureButton" parent="effect_symbol_chart" groups=[
"effect_symbols",
]]
margin_top = 312.0
margin_right = 100.0
margin_bottom = 412.0
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 3 )

[node name="okane" type="TextureButton" parent="effect_symbol_chart" groups=[
"effect_symbols",
]]
margin_left = 104.0
margin_top = 312.0
margin_right = 204.0
margin_bottom = 412.0
texture_normal = ExtResource( 10 )
texture_disabled = ExtResource( 3 )

[node name="rei" type="TextureButton" parent="effect_symbol_chart" groups=[
"effect_symbols",
]]
margin_left = 208.0
margin_top = 312.0
margin_right = 308.0
margin_bottom = 412.0
texture_normal = ExtResource( 11 )
texture_disabled = ExtResource( 3 )

[node name="wazawai" type="TextureButton" parent="effect_symbol_chart" groups=[
"effect_symbols",
]]
margin_left = 312.0
margin_top = 312.0
margin_right = 412.0
margin_bottom = 412.0
texture_normal = ExtResource( 4 )
texture_disabled = ExtResource( 3 )

[node name="mo" type="TextureButton" parent="effect_symbol_chart" groups=[
"effect_symbols",
]]
margin_top = 416.0
margin_right = 100.0
margin_bottom = 516.0
texture_normal = ExtResource( 6 )
texture_disabled = ExtResource( 3 )

[node name="diamonds5" type="TextureButton" parent="effect_symbol_chart" groups=[
"effect_symbols",
]]
margin_left = 104.0
margin_top = 416.0
margin_right = 204.0
margin_bottom = 516.0
texture_normal = ExtResource( 12 )
texture_disabled = ExtResource( 3 )

[node name="spadesnothing" type="TextureButton" parent="effect_symbol_chart"]
margin_left = 208.0
margin_top = 416.0
margin_right = 308.0
margin_bottom = 516.0
disabled = true

[node name="clubsnothing" type="TextureButton" parent="effect_symbol_chart"]
margin_left = 312.0
margin_top = 416.0
margin_right = 412.0
margin_bottom = 516.0
disabled = true

[node name="tomo" type="TextureButton" parent="effect_symbol_chart" groups=[
"modifier_symbols",
]]
margin_top = 520.0
margin_right = 100.0
margin_bottom = 620.0
texture_normal = ExtResource( 22 )
texture_disabled = ExtResource( 3 )

[node name="ue" type="TextureButton" parent="effect_symbol_chart" groups=[
"modifier_symbols",
]]
margin_left = 104.0
margin_top = 520.0
margin_right = 204.0
margin_bottom = 620.0
texture_normal = ExtResource( 23 )
texture_disabled = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="teki" type="TextureButton" parent="effect_symbol_chart" groups=[
"modifier_symbols",
]]
margin_left = 208.0
margin_top = 520.0
margin_right = 308.0
margin_bottom = 620.0
texture_normal = ExtResource( 24 )
texture_disabled = ExtResource( 3 )

[node name="mon" type="TextureButton" parent="effect_symbol_chart" groups=[
"modifier_symbols",
]]
margin_left = 312.0
margin_top = 520.0
margin_right = 412.0
margin_bottom = 620.0
texture_normal = ExtResource( 25 )
texture_disabled = ExtResource( 3 )

[node name="karada" type="TextureButton" parent="effect_symbol_chart" groups=[
"type_symbols",
]]
margin_top = 624.0
margin_right = 100.0
margin_bottom = 724.0
texture_normal = ExtResource( 21 )
texture_disabled = ExtResource( 3 )

[node name="omoi" type="TextureButton" parent="effect_symbol_chart" groups=[
"type_symbols",
]]
margin_left = 104.0
margin_top = 624.0
margin_right = 204.0
margin_bottom = 724.0
texture_normal = ExtResource( 18 )
texture_disabled = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mono" type="TextureButton" parent="effect_symbol_chart" groups=[
"type_symbols",
]]
margin_left = 208.0
margin_top = 624.0
margin_right = 308.0
margin_bottom = 724.0
texture_normal = ExtResource( 20 )
texture_disabled = ExtResource( 3 )

[node name="ji" type="TextureButton" parent="effect_symbol_chart" groups=[
"type_symbols",
]]
margin_left = 312.0
margin_top = 624.0
margin_right = 412.0
margin_bottom = 724.0
texture_normal = ExtResource( 19 )
texture_disabled = ExtResource( 3 )

[node name="chosen_symbols" type="GridContainer" parent="."]
margin_left = 64.4258
margin_top = 803.003
margin_right = 649.426
margin_bottom = 900.003
columns = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Button" parent="chosen_symbols" groups=[
"chosen_symbol_buttons",
]]
margin_right = 80.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Effect"

[node name="2" type="Button" parent="chosen_symbols" groups=[
"chosen_symbol_buttons",
]]
margin_left = 84.0
margin_right = 164.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Modifier"

[node name="3" type="Button" parent="chosen_symbols" groups=[
"chosen_symbol_buttons",
]]
margin_left = 168.0
margin_right = 248.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Effect"

[node name="4" type="Button" parent="chosen_symbols" groups=[
"chosen_symbol_buttons",
]]
margin_left = 252.0
margin_right = 332.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Modifier"

[node name="5" type="Button" parent="chosen_symbols" groups=[
"chosen_symbol_buttons",
]]
margin_left = 336.0
margin_right = 416.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Effect"

[node name="6" type="Button" parent="chosen_symbols" groups=[
"chosen_symbol_buttons",
]]
margin_left = 420.0
margin_right = 500.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Modifier"

[node name="7" type="Button" parent="chosen_symbols" groups=[
"chosen_symbol_buttons",
]]
margin_left = 504.0
margin_right = 584.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Type"

[node name="card_spawn" type="Position2D" parent="."]
position = Vector2( 390.972, 437.07 )

[node name="guidance" type="Label" parent="."]
margin_left = 19.7621
margin_top = 715.228
margin_right = 396.762
margin_bottom = 756.228
__meta__ = {
"_edit_use_anchors_": false
}

[node name="symbol_description" type="RichTextLabel" parent="."]
margin_left = 444.0
margin_top = 4.0
margin_right = 708.0
margin_bottom = 419.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="guidance_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="operations" type="GridContainer" parent="."]
margin_left = 16.0
margin_top = 936.0
margin_right = 692.0
margin_bottom = 1044.0
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="delete_button" type="Button" parent="operations"]
margin_right = 132.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Delete Card"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clear_button" type="Button" parent="operations"]
margin_left = 136.0
margin_right = 268.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Clear Card"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="preview_button" type="Button" parent="operations"]
margin_left = 272.0
margin_right = 404.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Preview"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save" type="Button" parent="operations"]
margin_left = 408.0
margin_right = 540.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Save Card"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clear_symbol" type="Button" parent="operations"]
margin_left = 544.0
margin_right = 676.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Remove Symbol"

[connection signal="guidance_changed" from="." to="." method="_on_cardmaker_guidance_changed"]
[connection signal="timeout" from="guidance_timer" to="." method="_on_guidance_timer_timeout"]
[connection signal="pressed" from="operations/delete_button" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="operations/clear_button" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="operations/preview_button" to="." method="_on_preview_button_pressed"]
[connection signal="pressed" from="operations/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="operations/clear_symbol" to="." method="_on_clear_symbol_pressed"]
